@@ -5,3 +5,4 @@ syntax: glob
 build/*
 dist/*
 Pygments.egg-info/*
+.ropeproject
